<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:padding="10dp"
    tools:context=".MOPSampleActivity">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_channel_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_channel_key"
            android:inputType="number"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_mop_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checkedButton="@id/rb_payload"
            android:orientation="horizontal"
            android:padding="0dp">

            <RadioButton
                android:id="@+id/rb_on_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_on_board" />

            <RadioButton
                android:id="@+id/rb_payload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/rb_payload" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_reliable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:paddingRight="5dp"
            android:text="@string/cb_reliable" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:paddingRight="5dp"
            android:text="@string/cb_log" />

        <TextView
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_selector_common"
            android:gravity="center"
            android:text="@string/btn_create"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_mop_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_selector_common"
            android:gravity="center"
            android:text="@string/btn_mop_back"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_pipeline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>